xidlc/tests/snapshots/codegen_snapshot__ts-http__http_stream_sse.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_stream_sse.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_stream_sse";

import type * as ifaceTypes from "./http_stream_sse.iface";
import * as ifaceSchemas from "./http_stream_sse.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class HttpStreamSseServiceClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            watch_topic(topic: string, lang: string): AsyncIterable<string> {
                const parsed = ifaceSchemas.HttpStreamSseServiceWatchTopicRequestSchema.parse({ "topic": topic, "lang": lang });
                let xidlPath = "/events/{topic}";
                xidlPath = xidlPath.replace("{" + "topic" + "}", encodePathSegment(topic));
                const query = new URLSearchParams();
                appendParam(query, "lang", lang, false, false);
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                return sseJsonStream<string>(this.fetchImpl, url, { method: "GET", headers }, undefined);
            
            
    }
    
            async get_attribute_online(): Promise<boolean> {
                let xidlPath = "/attribute/online";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<boolean>(resp, "text/plain", this.codecs);
        
    }
    
            async set_attribute_online(online: boolean): Promise<void> {
                const parsed = ifaceSchemas.HttpStreamSseServiceSetAttributeOnlineRequestSchema.parse({ "online": online });
                let xidlPath = "/attribute/online";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                const xidlBody = parsed["online"];
        headers.set("Content-Type", "text/plain");
        
        headers.set("Accept", "");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: encodeRequestBody(xidlBody, "text/plain", this.codecs, ifaceSchemas.HttpStreamSseServiceSetAttributeOnlineRequestSchema) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return;
        
    }
    
            watch_attribute_online(): AsyncIterable<boolean> {
                let xidlPath = "/HttpStreamSseService/watch_attribute_online";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                return sseJsonStream<boolean>(this.fetchImpl, url, { method: "GET", headers }, undefined);
            
            
    }
    
    
}
===============
http_stream_sse.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpStreamSseServiceWatchTopicRequest {
        topic: string;
            lang: string;
        }

    

export interface HttpStreamSseServiceSetAttributeOnlineRequest {
        online: boolean;
        }

export {};
===============
http_stream_sse.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";


    
export const HttpStreamSseServiceWatchTopicRequestSchema = z.object({
        topic: z.coerce.string(),
        lang: z.coerce.string(),
    });
export type HttpStreamSseServiceWatchTopicRequest = z.infer<typeof HttpStreamSseServiceWatchTopicRequestSchema>;

    
export const HttpStreamSseServiceSetAttributeOnlineRequestSchema = z.object({
        online: z.coerce.boolean(),
    });
export type HttpStreamSseServiceSetAttributeOnlineRequest = z.infer<typeof HttpStreamSseServiceSetAttributeOnlineRequestSchema>;
===============
http_stream_sse.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_stream_sse";

import type * as ifaceTypes from "./http_stream_sse.iface";
import * as ifaceSchemas from "./http_stream_sse.iface.zod";
import { z } from "zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpStreamSseService {
    
        watch_topic(topic: string, lang: string): Awaitable<AsyncIterable<string>>;
    
        get_attribute_online(): Awaitable<boolean>;
    
        set_attribute_online(online: boolean): Awaitable<void>;
    
        watch_attribute_online(): Awaitable<AsyncIterable<boolean>>;
    
}

export const HttpStreamSseServiceOperations = {
    
        watch_topic: defineOperation<HttpStreamSseService, "watch_topic">({
            handler: "watch_topic",
            method: "GET",
            path: "/events/{topic}",
            paths: ["/events/{topic}"],
            request: {
                kind: "object",
                args: ["topic", "lang"],
                schema: ifaceSchemas.HttpStreamSseServiceWatchTopicRequestSchema,
                path: [{ parameter: "topic", wireName: "topic", key: "topic", multi: false, catchAll: false }],
                query: [{ wireName: "lang", key: "lang", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/event-stream",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: true,
            
        },
        security: [],
        
    }),
    
        get_attribute_online: defineOperation<HttpStreamSseService, "get_attribute_online">({
            handler: "get_attribute_online",
            method: "GET",
            path: "/attribute/online",
            paths: ["/attribute/online"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        set_attribute_online: defineOperation<HttpStreamSseService, "set_attribute_online">({
            handler: "set_attribute_online",
            method: "POST",
            path: "/attribute/online",
            paths: ["/attribute/online"],
            request: {
                kind: "object",
                args: ["online"],
                schema: ifaceSchemas.HttpStreamSseServiceSetAttributeOnlineRequestSchema,
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "value",
                    contentType: "text/plain",
                    fields: [{ wireName: "online", key: "online" }],
                    singleKey: "online",
                    schema: ifaceSchemas.HttpStreamSseServiceSetAttributeOnlineRequestSchema,
                
            },
        },
        response: {
            contentType: "",
            bodyMode: "none",
            bodyFields: [],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        watch_attribute_online: defineOperation<HttpStreamSseService, "watch_attribute_online">({
            handler: "watch_attribute_online",
            method: "GET",
            path: "/HttpStreamSseService/watch_attribute_online",
            paths: ["/HttpStreamSseService/watch_attribute_online"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/event-stream",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: true,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_stream_sse.ts
===============
export {};
