xidlc/tests/snapshots/codegen_snapshot__ts-http__http_stream_sse_bindings.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_stream_sse_bindings.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_stream_sse_bindings";

import type * as ifaceTypes from "./http_stream_sse_bindings.iface";
import * as ifaceSchemas from "./http_stream_sse_bindings.iface.zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    
export class HttpStreamSseBindingsServiceClient {
    private readonly baseUrl: string;
    private readonly fetchImpl: FetchLike;
    private readonly defaultHeaders: Record<string, string>;
    private readonly auth?: ClientAuth;
    private readonly codecs: Record<string, HttpCodec>;

    constructor(baseUrl: string, options: ClientOptions = {}) {
        this.baseUrl = baseUrl;
        this.fetchImpl = resolveFetch(options.fetch);
        this.defaultHeaders = options.headers ?? {};
        this.auth = options.auth;
        this.codecs = options.codecs ?? {};
    }
    
        watch_project(project_id: string, cursor: string | undefined, trace_id: string): AsyncIterable<types.ProjectEvent> {
            const parsed = ifaceSchemas.HttpStreamSseBindingsServiceWatchProjectRequestSchema.parse({ "project_id": project_id, "cursor": cursor, "trace_id": trace_id });
            let path = "/projects/{project_id}/events";
            path = path.replace("{" + "project_id" + "}", encodePathSegment(project_id));
            const query = new URLSearchParams();
            appendParam(query, "cursor", cursor, true, false);
            const headers = new Headers(this.defaultHeaders);
            appendHeader(headers, "X-Trace-Id", trace_id, false, false);
            const cookies: string[] = [];
            applyCookies(headers, cookies);
            applyClientAuth(path, query, headers, this.auth, []);
            const queryString = query.toString();
            if (queryString.length > 0) {
                path = `${path}?${queryString}`;
            }
            const url = joinUrl(this.baseUrl, path);
            return sseJsonStream<types.ProjectEvent>(this.fetchImpl, url, { method: "GET", headers }, ifaceSchemas.models.ProjectEventSchema);
        
        
    }
    
    
}
===============
http_stream_sse_bindings.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface ProjectEvent {
        
            id: string;
                payload: string;
            }

export {};
===============
http_stream_sse_bindings.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpStreamSseBindingsServiceWatchProjectRequest {
        project_id: string;
            cursor?: string;
            trace_id: string;
        }

export {};
===============
http_stream_sse_bindings.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    import * as models from "./http_stream_sse_bindings.zod";
    export { models };


    
export const HttpStreamSseBindingsServiceWatchProjectRequestSchema = z.object({
        project_id: z.coerce.string(),
        cursor: z.coerce.string().optional(),
        trace_id: z.coerce.string(),
    });
export type HttpStreamSseBindingsServiceWatchProjectRequest = z.infer<typeof HttpStreamSseBindingsServiceWatchProjectRequestSchema>;
===============
http_stream_sse_bindings.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_stream_sse_bindings";

import type * as ifaceTypes from "./http_stream_sse_bindings.iface";
import * as ifaceSchemas from "./http_stream_sse_bindings.iface.zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpStreamSseBindingsService {
    
        watch_project(project_id: string, cursor: string | undefined, trace_id: string): Awaitable<AsyncIterable<types.ProjectEvent>>;
    
}

export const HttpStreamSseBindingsServiceOperations = {
    
        watch_project: defineOperation<HttpStreamSseBindingsService, "watch_project">({
            handler: "watch_project",
            method: "GET",
            path: "/projects/{project_id}/events",
            paths: ["/projects/{project_id}/events"],
            request: {
                kind: "object",
                args: ["project_id", "cursor", "trace_id"],
                schema: ifaceSchemas.HttpStreamSseBindingsServiceWatchProjectRequestSchema,
                path: [{ parameter: "project_id", wireName: "project_id", key: "project_id", multi: false, catchAll: false }],
                query: [{ wireName: "cursor", key: "cursor", multi: false }],
                headers: [{ wireName: "X-Trace-Id", key: "trace_id", multi: false }],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/event-stream",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: true,
            streamSchema: ifaceSchemas.models.ProjectEventSchema,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_stream_sse_bindings.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const ProjectEventSchema = z.object({
        
            id: z.coerce.string(),
        
            payload: z.coerce.string()
        
    });
