xidlc/tests/snapshots/codegen_snapshot__ts-http__http_union.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_union.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_union";
import { readResponseCookies, readResponseHeader } from "xidl-typescript-client";
import * as $xidlErrors from "./http_union.errors";

import type * as ifaceTypes from "./http_union.iface";
import * as ifaceSchemas from "./http_union.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class FilesClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async get_meta(path: string): Promise<{ kind: "Json", value: types.FileMeta } | { kind: "OctetStream", value: Uint8Array }> {
                const parsed = ifaceSchemas.FilesGetMetaRequestSchema.parse({ "path": path });
                let xidlPath = "/meta";
                const query = new URLSearchParams();
                appendParam(query, "path", path, false, false);
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "application/json, application/octet-stream");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            await this.throwGetMetaError(resp);
            
        }
        
            const contentType = (resp.headers.get("Content-Type") ?? "").split(";")[0].trim();
                if (contentType === "application/json") {
                    const schema = ifaceSchemas.models.FileMetaSchema;
                const value = schema.parse(await decodeResponseBody(resp, "application/json", this.codecs, schema));
                return { kind: "Json", value, ...buildResponsePayload(undefined, resp, "none", [], [], []) } as { kind: "Json", value: types.FileMeta } | { kind: "OctetStream", value: Uint8Array };
            }
                if (contentType === "application/octet-stream") {
                    const value = new Uint8Array(await resp.arrayBuffer());
                return { kind: "OctetStream", value, ...buildResponsePayload(undefined, resp, "none", [], [], []) } as { kind: "Json", value: types.FileMeta } | { kind: "OctetStream", value: Uint8Array };
            }
        throw await parseXidlError(resp);
    }
    
            async get_file(path: string): Promise<{ kind: "Json", value: types.FileMeta, etag: string } | { kind: "OctetStream", value: Uint8Array, etag: string }> {
                const parsed = ifaceSchemas.FilesGetFileRequestSchema.parse({ "path": path });
                let xidlPath = "/file";
                const query = new URLSearchParams();
                appendParam(query, "path", path, false, false);
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "application/json, application/octet-stream");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            await this.throwGetFileError(resp);
            
        }
        
            const contentType = (resp.headers.get("Content-Type") ?? "").split(";")[0].trim();
                if (contentType === "application/json") {
                    const schema = ifaceSchemas.models.FileMetaSchema;
                const value = schema.parse(await decodeResponseBody(resp, "application/json", this.codecs, schema));
                return { kind: "Json", value, ...buildResponsePayload(undefined, resp, "none", [], [{ name: "ETag", key: "etag", optional: false, isMulti: false, decode: value => value }], []) } as { kind: "Json", value: types.FileMeta, etag: string } | { kind: "OctetStream", value: Uint8Array, etag: string };
            }
                if (contentType === "application/octet-stream") {
                    const value = new Uint8Array(await resp.arrayBuffer());
                return { kind: "OctetStream", value, ...buildResponsePayload(undefined, resp, "none", [], [{ name: "ETag", key: "etag", optional: false, isMulti: false, decode: value => value }], []) } as { kind: "Json", value: types.FileMeta, etag: string } | { kind: "OctetStream", value: Uint8Array, etag: string };
            }
        throw await parseXidlError(resp);
    }
    
    
        async throwGetMetaError(resp: Response): Promise<never> {
            const status = resp.status;
            if (status === 404) {
                const bodySchema = z.object({ "code": z.coerce.number().int().nonnegative(), "msg": z.coerce.string(),  });
                const rawBody = await resp.clone().json().catch(() => undefined);
                if (rawBody == null || rawBody["code"] === undefined || rawBody["msg"] === undefined) throw await parseXidlError(resp);
                const decoded = bodySchema.safeParse(deserialize(rawBody, bodySchema));
                if (!decoded.success) throw await parseXidlError(resp);
                const body = decoded.data;
                throw new $xidlErrors.NotFound({
                    "code": body["code"] as never,
                    "msg": body["msg"] as never,
                    });
            }
            throw await parseXidlError(resp);
        }
    
        async throwGetFileError(resp: Response): Promise<never> {
            const status = resp.status;
            if (status === 404) {
                const bodySchema = z.object({ "code": z.coerce.number().int().nonnegative(), "msg": z.coerce.string(),  });
                const rawBody = await resp.clone().json().catch(() => undefined);
                if (rawBody == null || rawBody["code"] === undefined || rawBody["msg"] === undefined) throw await parseXidlError(resp);
                const decoded = bodySchema.safeParse(deserialize(rawBody, bodySchema));
                if (!decoded.success) throw await parseXidlError(resp);
                const body = decoded.data;
                throw new $xidlErrors.NotFound({
                    "code": body["code"] as never,
                    "msg": body["msg"] as never,
                    });
            }
            throw await parseXidlError(resp);
        }
    
}
===============
http_union.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface FileMeta {
        
            id: string;
                etag: string;
            }

    

export interface NotFound {
        
            code: number;
                msg: string;
            }

    

export type FileResponse = { meta: FileMeta } | { raw: Array<number> };

export {};
===============
http_union.errors.ts
===============

// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_union";

    /** Typed HTTP error for status 404 responses. */
    export class NotFound extends Error {
        readonly status = 404;
        readonly kind = "NotFound" as const;
        readonly code: number;
    readonly msg: string;
    
    constructor(fields: {
        "code": number;
        "msg": string;
        
    }) {
        super("NotFound");
        this.name = "NotFound";
        this.code = fields["code"];
        this.msg = fields["msg"];
        
    }
}
===============
http_union.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    import type * as types from "./http_union";


    

export interface FilesGetMetaRequest {
        path: string;
        }

    

export interface FilesGetFileRequest {
        path: string;
        }

    

export interface FilesGetFileResponse {
        return: types.FileResponse;
            etag: string;
        }

export {};
===============
http_union.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    import * as models from "./http_union.zod";
    export { models };


    
export const FilesGetMetaRequestSchema = z.object({
        path: z.coerce.string(),
    });
export type FilesGetMetaRequest = z.infer<typeof FilesGetMetaRequestSchema>;

    
export const FilesGetFileRequestSchema = z.object({
        path: z.coerce.string(),
    });
export type FilesGetFileRequest = z.infer<typeof FilesGetFileRequestSchema>;

    
export const FilesGetFileResponseSchema = z.object({
        return: models.FileResponseSchema,
        etag: z.coerce.string(),
    });
export type FilesGetFileResponse = z.infer<typeof FilesGetFileResponseSchema>;
===============
http_union.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_union";
import * as $xidlErrors from "./http_union.errors";

import type * as ifaceTypes from "./http_union.iface";
import * as ifaceSchemas from "./http_union.iface.zod";
import { z } from "zod";
import {
    defineOperation,
    writeResponseBindings,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface Files {
    
        get_meta(path: string): Awaitable<{ kind: "Json", value: types.FileMeta } | { kind: "OctetStream", value: Uint8Array }>;
    
        get_file(path: string): Awaitable<ifaceTypes.FilesGetFileResponse>;
    
}

export const FilesOperations = {
    
        get_meta: defineOperation<Files, "get_meta">({
            handler: "get_meta",
            method: "GET",
            path: "/meta",
            paths: ["/meta"],
            request: {
                kind: "object",
                args: ["path"],
                schema: ifaceSchemas.FilesGetMetaRequestSchema,
                path: [],
                query: [{ wireName: "path", key: "path", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            representations: [{ kind: "Json", contentType: "application/json", schema: ifaceSchemas.models.FileMetaSchema }, { kind: "OctetStream", contentType: "application/octet-stream" }],
            stream: false,
            
        },
        security: [],
        
            errors: {
                match: (error: unknown) => {
                    
                        if (error instanceof $xidlErrors.NotFound) {
                            const headers = new Headers();
                            writeResponseBindings(headers, { ...error }, [], false);
                            writeResponseBindings(headers, { ...error }, [], true);
                            headers.set("Content-Type", "application/json");
                            return {
                                status: 404,
                                headers,
                                body: { "code": error.code, "msg": error.msg, },
                            };
                            
                    }
                
                return undefined;
            },
        },
        
    }),
    
        get_file: defineOperation<Files, "get_file">({
            handler: "get_file",
            method: "GET",
            path: "/file",
            paths: ["/file"],
            request: {
                kind: "object",
                args: ["path"],
                schema: ifaceSchemas.FilesGetFileRequestSchema,
                path: [],
                query: [{ wireName: "path", key: "path", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [{ wireName: "ETag", key: "etag", multi: false }],
            cookies: [],
            representations: [{ kind: "Json", contentType: "application/json", schema: ifaceSchemas.models.FileMetaSchema }, { kind: "OctetStream", contentType: "application/octet-stream" }],
            stream: false,
            
        },
        security: [],
        
            errors: {
                match: (error: unknown) => {
                    
                        if (error instanceof $xidlErrors.NotFound) {
                            const headers = new Headers();
                            writeResponseBindings(headers, { ...error }, [], false);
                            writeResponseBindings(headers, { ...error }, [], true);
                            headers.set("Content-Type", "application/json");
                            return {
                                status: 404,
                                headers,
                                body: { "code": error.code, "msg": error.msg, },
                            };
                            
                    }
                
                return undefined;
            },
        },
        
    }),
    
} as const;
===============
http_union.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const FileMetaSchema = z.object({
        
            id: z.coerce.string(),
        
            etag: z.coerce.string()
        
    });

    
    export const NotFoundSchema = z.object({
        
            code: z.coerce.number().int().nonnegative(),
        
            msg: z.coerce.string()
        
    });

    
    export const FileResponseSchema = z.union([z.object({ meta: FileMetaSchema }), z.object({ raw: z.array(z.coerce.number().int().nonnegative()) })]);
